--- a/src/styles/practices.css
+++ b/src/styles/practices.css
@@ -3,6 +3,17 @@
 }
 .practices__card{
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 2rem;
+}
+@media(min-width: 517px){
+    .practices__card{
+        grid-template-columns: repeat(2,1fr);
+    }
+}
+@media(min-width: 1044px){
+    .practices__card{
+        grid-template-columns: repeat(4,1fr);
+    }
+
 }
