--- a/src/styles/realprojects.css
+++ b/src/styles/realprojects.css
@@ -7,10 +7,19 @@ p{
 
 .projects{
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    grid-template-columns: repeat(1, 1fr);
     gap: 2rem;
 }
-
+@media (min-width:575px) {
+    .projects{
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media(min-width:848px){
+    .projects{
+        grid-template-columns: repeat(3, 1fr);
+    }
+}
 .card{
     padding-bottom: 1rem;
     display: flex;
